1.自定义toast 2.新增关闭部分动画开关

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <style name="Theme.WordsFairyNote" parent="android:Theme.Material.Light.NoActionBar" >
-        <item name="android:statusBarColor">@android:color/transparent</item>
+    <style name="Theme.WordsFairyNote" parent="Theme.SplashScreen" >
+        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
+        <item name="windowSplashScreenBackground">@color/white</item>
+        <item name="postSplashScreenTheme">@style/Theme.Nia</item>
 
     </style>
 
+    <!-- The final theme we use -->
+    <style name="Theme.Nia" parent="android:Theme.Material.Light.NoActionBar" />
 
 <!--    <style name="Theme.WordsFairyNote" parent="android:Theme.Material.Light.NoActionBar" >-->
 <!--        <item name="android:windowTranslucentStatus">true</item>-->
