1.优化搜索功能 2.解决之前滥用distinctUntilChanged()，shareWhileSubscribed()所导致的bug

--- a/app/src/main/res/values-night/app_colors.xml
+++ b/app/src/main/res/values-night/app_colors.xml
@@ -6,10 +6,11 @@
 
     <color name="iconGrey">#9ea1b0</color>
     <color name="icon">#FF333333</color>
-    <color name="logo">#FFFFFFFF</color>
+    <color name="logo">#9ea1b0</color>
 
 
     <!-- 图标着色 -->
     <color name="app_iconPrimary">@color/icon</color>
     <color name="app_tintIconGrey">@color/iconGrey</color>
+
 </resources>
